test/features/errors/runtime/e3003_stack_overflow.spl
# E3003: Stack Overflow

Feature: E3003 - Stack Overflow Detected
  As a Simple runtime
  I want to detect stack overflow
  So that infinite recursion is caught

  Background:
    Given I have the Simple runtime

  Scenario: Infinite recursion
    When I run:
      '''
      fn infinite():
        infinite()  # Runtime error: stack overflow

      fn test():
        infinite()
      '''
    Then I should see runtime error E3003
    And the error message should be "stack overflow detected"
    And the label should indicate "stack overflow"
    And the help should suggest "reduce recursion depth or increase stack size"

  Scenario: Deep but valid recursion
    When I run:
      '''
      fn countdown(n: i32):
        if n > 0:
          countdown(n - 1)

      fn test():
        countdown(100)  # OK: not too deep
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run:
      '''
      fn infinite():
        infinite()

      fn test():
        infinite()
      '''
    Then I should see runtime error E3003
    And the error message should contain "스택 오버플로"
